<resources>
    <string name="app_name">The Happy Foodie</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="registrate">¿Aún no tienes una cuenta? Registrate</string>
    <string name="then_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="image_description">restaurante</string>
    <string name="stars">stars</string>
    <string name="log">YA TENGO CUENTA</string>
    <string name="key">AIzaSyB44zyt9YRKAozDbpM_tqpjSRjOpszIYpg</string>
    <string name="cerrado">Cerrado</string>
    <string name="abierto">Abierto ahora</string>
    <string name="rate">Calificación: </string>
    <string name="nearbyUrlBase">https://maps.googleapis.com/maps/api/place/search/json?</string>
    <string name="statusRestaurant">El restaurante se encuentra al</string>
    <string name="capacity">% de su capacidad</string>
    <string name="success">SUCCESS</string>
    <string name="signinSuccess">signInWithEmail:success</string>
    <string name="fail">FAILED</string>
    <string name="signinFail">signInWithEmail:failure</string>
    <string name="failAuth">Authentication failed.</string>
    <string name="users">users</string>
    <string name="placeid">placeId</string>
    <string name="placeSuccess">Place Success</string>
    <string name="placeFoundId">Place found ID:</string>
    <string name="placeFail">Place Failure</string>
    <string name="placeNotFound">Place not found:</string>
    <string name="statusCode">status code:</string>
</resources>
